align: Fixes to secretary cards alignment.
Remove absolute positioning done in the previous commit.

--- a/css/custom.css
+++ b/css/custom.css
@@ -5,24 +5,3 @@
 	padding: 0 0 3em 0;
 	position: relative;
 }
-
-#container {
-    width:100%;
-    text-align:center;
-}
-
-#left {
-    float:left;
-    margin-left: 130px;
-}
-
-#center {
-    display: inline-block;
-    margin-left: 20px;
-    }
-
-#right {
-    float:right;
-    margin-right: 130px;
-}
-
